# godot-wtransport

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  deny.toml  rust-toolchain.toml
.github/workflows/: desktop.yml  mobile.yml  release.yml  sanitizers.yml  security.yml
cmake/: godot-cpp-profile.json
demo/: export_presets.cfg  main.tscn  project.godot
demo/addons/godot_wtransport/: godot-wtransport.gdextension  godot-wtransport.gdextension.uid
demo/scripts/: main.gd  main.gd.uid
demo/tests/: connection_failure.gd  connection_failure.gd.uid  lifecycle.gd  lifecycle.gd.uid  mobile_active_lifecycle.gd  mobile_lifecycle.gd  multi_session.gd  phase5_operations.gd  streams.gd  tls_failure.gd  tls_failure.gd.uid
demo/web/: godot_wtransport_web.js  web_transport_client.gd  web_transport_session.gd  web_transport_stream.gd
docs/: api.md  architecture.md  compatibility.md  conformance.md  distribution.md  mobile-validation.md  mobile.md  operations.md  security.md  store-privacy.md  tls.md  troubleshooting.md  web-bridge.md
docs/adr/: 0001-webtransport-stack.md
extension/include/: webtransport.hpp
extension/src/: register_types.cpp  webtransport.cpp
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/ffi/: Cargo.toml
rust/ffi/include/: godot_wtransport.h
rust/ffi/src/: lib.rs
scripts/: build_android.sh  build_desktop.sh  build_macos_universal.sh  package_desktop_artifacts.sh  package_release.sh  prepare_ios.sh  smoke_ffi_integration.sh  smoke_release.sh  smoke_sanitizers.sh  smoke_streams.sh  smoke_web_export.sh
tests/ffi/: integration.c  lifecycle.c
tools/dev-server/: Cargo.toml
tools/dev-server/src/: main.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
