[workspace]
members = ["rust/core", "rust/ffi", "tools/dev-server", "tools/xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license-file = "LICENSE"
repository = "https://github.com/carrera-seo/godot-wtransport"

[workspace.dependencies]
anyhow = "1.0.100"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
wtransport = { version = "0.7.1", features = ["quinn"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
