[package]
name = "godot-wtransport-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
publish = false

[features]
default = []
dangerous-insecure = ["wtransport/dangerous-configuration"]

[dependencies]
rustls.workspace = true
thiserror.workspace = true
tokio.workspace = true
wtransport.workspace = true

[dev-dependencies]
anyhow.workspace = true
