[package]
name = "godot-wtransport-dev-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wtransport.workspace = true
